# fastwfc

./: .gitignore  CMakeLists.txt  LICENSE  setup.py
.github/workflows/: pip.yml
src/fastwfc/: __init__.py  __main__.py.in
tests/: test_wfc_wrapping.py
